# mcc

./: .clang-format  CMakeLists.txt
assets/shaders/: basic.fragment.glsl
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb/: stb_easy_font.h  stb_image.h  stb_truetype.h  stb_voxel_render.h
libs/stb/tests/caveview/: cave_main.c
src/: main.cpp
src/core/: Application.class.cpp  Application.class.hpp  window.class.cpp  window.class.hpp
src/renderer/: Camera.class.cpp  Camera.class.hpp  Shader.class.cpp  Shader.class.hpp
